<resources>
    <string name="app_name">博客</string>
    <string name="action_settings">设置</string>
    <string name="username">账号</string>
    <string name="user_name">用户名</string>
    <string name="userpassword">密码</string>
    <string name="newuserpassword">新密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="home">首页</string>
    <string name="my_info">我的信息</string>
    <string name="modified_password">修改密码</string>
    <string name="about">关于</string>
    <string name="security_code">获取验证码</string>
    <string name="detail">我在这里挖掘最优质的互联网技术</string>
    <string name="redact">编辑</string>
    <string name="email">邮箱</string>
    <string name="post">职位</string>
    <string name="corporation">公司</string>
    <string name="recommend">简介</string>
    <string name="blogs_address">博客地址</string>
    <string name="photo">相册</string>
    <string name="save">保存</string>
    <string name="content">是否要修改信息</string>
    <string name="agree">确定</string>
    <string name="disagree">取消</string>
    <string name="share">分享</string>
    <string name="copy">复制</string>
    <string name="jump_web">跳转web</string>
</resources>
