<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
    <!--android:id="@+id/action_share"-->
    <!--android:orderInCategory="11"-->
    <!--android:title="1111111"-->
    <!--app:showAsAction="ifRoom" />-->
    <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"-->
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_jump_web"
        android:orderInCategory="100"
        android:title="@string/jump_web"
        app:showAsAction="never" />
</menu>