<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="100dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/username"
                android:text="hdb"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_userpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/userpassword"
                android:text="hdbhdb"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_newuserpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/newuserpassword"
                android:inputType="textPassword"
                android:text="hdbhdb"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/email"
                android:text="hdbhdb"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <com.zy.blogs.blogssample.widget.StateButton
            android:id="@+id/btn_security_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_code"
            app:animationDuration="0"
            app:normalBackgroundColor="@android:color/white"
            app:normalStrokeColor="@color/zorange15"
            app:normalStrokeWidth="0.5dp"
            app:normalTextColor="@color/zorange15"
            app:pressedBackgroundColor="@color/orange1"
            app:pressedStrokeColor="@color/zorange15"
            app:pressedStrokeWidth="0.5dp"
            app:pressedTextColor="@color/zorange15"
            app:radius="2.5dp"
            app:unableBackgroundColor="@color/secondary_text"
            app:unableStrokeColor="@color/secondary_text"
            app:unableStrokeWidth="0.5dp"
            app:unableTextColor="@color/gray" />

        <Button
            android:id="@id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />


</RelativeLayout>