<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="头像"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@id/iv_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_user"
                        app:riv_border_color="@color/colorPrimary"
                        app:riv_border_width="0.5dp"
                        app:riv_corner_radius="10dp"
                        app:riv_mutate_background="true"
                        app:riv_oval="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/username"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/tv_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/post"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corporation"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/tv_corporation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/corporation"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recommend"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/tv_recommend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/recommend"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blogs_address"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@id/tv_blogs_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/blogs_address"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>
