<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="12dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="@drawable/logo"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9" />

            <android.support.v7.widget.Toolbar
                android:id="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/rl_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="90dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.1">

                <TextView
                    android:id="@id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_username"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@id/iv_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_user"
                    app:riv_border_color="@color/colorPrimary"
                    app:riv_border_width="0.5dp"
                    app:riv_corner_radius="50dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_avatar">

                    <TextView
                        android:id="@id/tv_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/btn_redact"
                        android:paddingRight="10dp"
                        android:text="@string/detail"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@id/btn_redact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/redact" />

                </RelativeLayout>

            </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />


</android.support.design.widget.CoordinatorLayout>
